--- a/views/account_move.xml
+++ b/views/account_move.xml
@@ -16,14 +16,18 @@
       <xpath expr="//field[@name='invoice_line_ids']" position="replace">
         <notebook>
           <page string="Invoice Lines">
-            <field name="linked_invoice_line_ids">
+            <field name="linked_invoice_line_proxy_ids">
               <tree editable="bottom">
-                <field name="display_name"/>
+                <field name="product_id"/>
                 <field name="name"/>
                 <field name="quantity"/>
-                <field name="price_unit"/> 
+                <field name="price_unit"/>
+                <field name="return_amount"/>
+                <field name="account_id"/>
+                <field name="tax_ids"/>
               </tree>
             </field>
+
           </page>
         </notebook>
       </xpath>
