adding storage support

--- a/views/account_move.xml
+++ b/views/account_move.xml
@@ -79,6 +79,7 @@
                                                options="{'product_field': 'product_id', 'account_field': 'account_id'}"
                                                business_domain_compute="parent.move_type in ['out_invoice', 'out_refund', 'out_receipt'] and 'invoice' or parent.move_type in ['in_invoice', 'in_refund', 'in_receipt'] and 'bill' or 'general'"/>
                                         <field name="quantity" optional="show"/>
+                                        <field name="qty_allowed" optional="show"/>
                                         <field name="product_uom_category_id" invisible="1"/>
                                         <field name="product_uom_id" string="UoM" groups="uom.group_uom" optional="show"/>
                                         <field name="price_unit" string="Price"/>
