--- a/views/purchase_order.xml
+++ b/views/purchase_order.xml
@@ -4,7 +4,7 @@
       <field name="model">purchase.order</field>
       <field name="inherit_id" ref="purchase.purchase_order_form"/>
       <field name="arch" type="xml">
-        <xpath expr="//button[@name='action_view_invoice']" position="before">
+          <xpath expr="//button[@name='action_view_invoice']" position="before">
             <button name="action_open_linked_batch_bills"
                     type="object"
                     class="oe_stat_button"
@@ -12,7 +12,17 @@
                     attrs="{'invisible': [('linked_batch_bill_count', '=', 0)]}">
                 <field name="linked_batch_bill_count" widget="statinfo" string="Return Bills"/>
             </button>
-            </xpath>
+          </xpath>
+
+          <xpath expr="//button[@name='action_view_invoice']" position="before">
+            <button name="action_open_stock_movement"
+                    type="object"
+                    class="oe_stat_button"
+                    icon="fa-building-o"
+                    attrs="{'invisible': [('linked_stock_movement_count', '=', 0)]}">
+                <field name="linked_stock_movement_count" widget="statinfo" string="Stock Movements"/>
+            </button>
+          </xpath>
       </field>
     </record>
 </odoo>
